// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Navbar Menu Menu can render 1`] = `
<DocumentFragment>
  .emotion-1 {
  background-color: #29333a !important;
  box-shadow: none !important;
  background-image: none !important;
  top: 15px;
  left: 15px;
  position: absolute;
  z-index: 1020;
}

.emotion-0 {
  color: #7a7e82 !important;
}

.emotion-0:hover {
  color: white;
}

.emotion-6 {
  color: white;
  background-color: #29333a;
  display: block;
  margin: 60px -20px 0 -20px;
}

.emotion-5 {
  min-height: 250px;
  padding: 50px 0px;
  overflow-y: scroll;
  max-height: 100vh;
}

@media (max-width:768px) {
  .emotion-5 {
    padding: 50px 20px;
  }
}

.emotion-3 {
  display: inline-block;
}

.emotion-4 {
  margin: 0 auto;
}

@media (min-width:768px) {
  .emotion-4 {
    width: 750px;
  }
}

@media (min-width:992px) {
  .emotion-4 {
    width: 970px;
  }
}

@media (min-width:1200px) {
  .emotion-4 {
    width: 1170px;
  }
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-2 * {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

<div>
    <button
      class="bp3-button emotion-1"
      type="button"
    >
      <span
        class="bp3-button-text"
      >
        <span
          class="bp3-icon bp3-icon-menu emotion-0"
          icon="menu"
        >
          <svg
            data-icon="menu"
            height="32"
            viewBox="0 0 20 20"
            width="32"
          >
            <desc>
              menu
            </desc>
            <path
              d="M1 6h18c.55 0 1-.45 1-1s-.45-1-1-1H1c-.55 0-1 .45-1 1s.45 1 1 1zm18 3H1c-.55 0-1 .45-1 1s.45 1 1 1h18c.55 0 1-.45 1-1s-.45-1-1-1zm0 5H1c-.55 0-1 .45-1 1s.45 1 1 1h18c.55 0 1-.45 1-1s-.45-1-1-1z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </span>
    </button>
    <div
      class="emotion-6"
    >
      <div
        class="bp3-collapse"
      >
        <div
          aria-hidden="true"
          class="bp3-collapse-body"
          style="transform: translateY(-0px);"
        >
          <div
            class="emotion-5"
          >
            <div
              class="emotion-4"
            >
              <div
                class="emotion-3"
              >
                <div
                  class="emotion-2"
                />
              </div>
              <span />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Navbar Menu Menu can render with error 1`] = `
<DocumentFragment>
  .emotion-1 {
  background-color: #29333a !important;
  box-shadow: none !important;
  background-image: none !important;
  top: 15px;
  left: 15px;
  position: absolute;
  z-index: 1020;
}

.emotion-0 {
  color: #7a7e82 !important;
}

.emotion-0:hover {
  color: white;
}

.emotion-8 {
  color: white;
  background-color: #29333a;
  display: block;
  margin: 60px -20px 0 -20px;
}

.emotion-7 {
  min-height: 250px;
  padding: 50px 0px;
  overflow-y: scroll;
  max-height: 100vh;
}

@media (max-width:768px) {
  .emotion-7 {
    padding: 50px 20px;
  }
}

.emotion-3 {
  display: inline-block;
}

.emotion-5 {
  margin: 20px 0;
}

.emotion-6 {
  margin: 0 auto;
}

@media (min-width:768px) {
  .emotion-6 {
    width: 750px;
  }
}

@media (min-width:992px) {
  .emotion-6 {
    width: 970px;
  }
}

@media (min-width:1200px) {
  .emotion-6 {
    width: 1170px;
  }
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-2 * {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.emotion-4 {
  text-align: left;
}

<div>
    <button
      class="bp3-button emotion-1"
      type="button"
    >
      <span
        class="bp3-button-text"
      >
        <span
          class="bp3-icon bp3-icon-menu emotion-0"
          icon="menu"
        >
          <svg
            data-icon="menu"
            height="32"
            viewBox="0 0 20 20"
            width="32"
          >
            <desc>
              menu
            </desc>
            <path
              d="M1 6h18c.55 0 1-.45 1-1s-.45-1-1-1H1c-.55 0-1 .45-1 1s.45 1 1 1zm18 3H1c-.55 0-1 .45-1 1s.45 1 1 1h18c.55 0 1-.45 1-1s-.45-1-1-1zm0 5H1c-.55 0-1 .45-1 1s.45 1 1 1h18c.55 0 1-.45 1-1s-.45-1-1-1z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </span>
    </button>
    <div
      class="emotion-8"
    >
      <div
        class="bp3-collapse"
      >
        <div
          aria-hidden="true"
          class="bp3-collapse-body"
          style="transform: translateY(-0px);"
        >
          <div
            class="emotion-7"
          >
            <div
              class="emotion-6"
            >
              <div
                class="emotion-3"
              >
                <div
                  class="emotion-2"
                />
              </div>
              <div
                class="bp3-callout bp3-intent-danger bp3-callout-icon emotion-5"
              >
                <span
                  class="bp3-icon bp3-icon-error"
                  icon="error"
                >
                  <svg
                    data-icon="error"
                    height="20"
                    viewBox="0 0 20 20"
                    width="20"
                  >
                    <desc>
                      error
                    </desc>
                    <path
                      d="M10 0C4.48 0 0 4.48 0 10s4.48 10 10 10 10-4.48 10-10S15.52 0 10 0zm1 16H9v-2h2v2zm0-3H9V4h2v9z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
                <h4
                  class="bp3-heading"
                >
                  [401]  Not authorized. 
                </h4>
                <pre
                  class="emotion-4"
                >
                  {
  "response": {
    "status": 401,
    "statusText": "Not authorized",
    "data": ""
  }
}
                </pre>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Navbar Menu Menu can render with links 1`] = `
<DocumentFragment>
  .emotion-1 {
  background-color: #29333a !important;
  box-shadow: none !important;
  background-image: none !important;
  top: 15px;
  left: 15px;
  position: absolute;
  z-index: 1020;
}

.emotion-0 {
  color: #7a7e82 !important;
}

.emotion-0:hover {
  color: white;
}

.emotion-13 {
  color: white;
  background-color: #29333a;
  display: block;
  margin: 60px -20px 0 -20px;
}

.emotion-12 {
  min-height: 250px;
  padding: 50px 0px;
  overflow-y: scroll;
  max-height: 100vh;
}

@media (max-width:768px) {
  .emotion-12 {
    padding: 50px 20px;
  }
}

.emotion-3 {
  display: inline-block;
}

.emotion-4 {
  font-size: 24px;
  color: #7a7e82;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  display: block;
}

.emotion-5 {
  border-color: #7a7e82;
  margin: 5px 0 10px 0;
}

.emotion-9 {
  padding-bottom: 35px;
}

.emotion-6 {
  color: #7a7e82;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  -webkit-flex-basis: 300px;
  -ms-flex-preferred-size: 300px;
  flex-basis: 300px;
  padding: 5px 0;
  color: #cecece;
}

.emotion-6:hover {
  color: white;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-11 {
  margin: 0 auto;
}

@media (min-width:768px) {
  .emotion-11 {
    width: 750px;
  }
}

@media (min-width:992px) {
  .emotion-11 {
    width: 970px;
  }
}

@media (min-width:1200px) {
  .emotion-11 {
    width: 1170px;
  }
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-2 * {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

<div>
    <button
      class="bp3-button emotion-1"
      type="button"
    >
      <span
        class="bp3-button-text"
      >
        <span
          class="bp3-icon bp3-icon-menu emotion-0"
          icon="menu"
        >
          <svg
            data-icon="menu"
            height="32"
            viewBox="0 0 20 20"
            width="32"
          >
            <desc>
              menu
            </desc>
            <path
              d="M1 6h18c.55 0 1-.45 1-1s-.45-1-1-1H1c-.55 0-1 .45-1 1s.45 1 1 1zm18 3H1c-.55 0-1 .45-1 1s.45 1 1 1h18c.55 0 1-.45 1-1s-.45-1-1-1zm0 5H1c-.55 0-1 .45-1 1s.45 1 1 1h18c.55 0 1-.45 1-1s-.45-1-1-1z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </span>
    </button>
    <div
      class="emotion-13"
    >
      <div
        class="bp3-collapse"
      >
        <div
          aria-hidden="true"
          class="bp3-collapse-body"
          style="transform: translateY(-0px);"
        >
          <div
            class="emotion-12"
          >
            <div
              class="emotion-11"
            >
              <div
                class="emotion-3"
              >
                <div
                  class="emotion-2"
                />
              </div>
              <div>
                <span
                  class="emotion-4"
                />
                <hr
                  class="emotion-5"
                />
                <div
                  class="emotion-9 emotion-2"
                >
                  <a
                    class="emotion-6"
                    href="/first-tab/"
                  >
                    First Tab
                  </a>
                  <a
                    class="emotion-6"
                    href="/palette/"
                  >
                    Palette
                  </a>
                  <a
                    class="emotion-6"
                    href="/second-tab/"
                  >
                    Second Tab
                  </a>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Navbar Menu Menu can render with links and rendered navbar items 1`] = `
<DocumentFragment>
  .emotion-1 {
  background-color: #29333a !important;
  box-shadow: none !important;
  background-image: none !important;
  top: 15px;
  left: 15px;
  position: absolute;
  z-index: 1020;
}

.emotion-0 {
  color: #7a7e82 !important;
}

.emotion-0:hover {
  color: white;
}

.emotion-13 {
  color: white;
  background-color: #29333a;
  display: block;
  margin: 60px -20px 0 -20px;
}

.emotion-12 {
  min-height: 250px;
  padding: 50px 0px;
  overflow-y: scroll;
  max-height: 100vh;
}

@media (max-width:768px) {
  .emotion-12 {
    padding: 50px 20px;
  }
}

.emotion-3 {
  display: inline-block;
}

.emotion-4 {
  font-size: 24px;
  color: #7a7e82;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  display: block;
}

.emotion-5 {
  border-color: #7a7e82;
  margin: 5px 0 10px 0;
}

.emotion-9 {
  padding-bottom: 35px;
}

.emotion-6 {
  color: #7a7e82;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  -webkit-flex-basis: 300px;
  -ms-flex-preferred-size: 300px;
  flex-basis: 300px;
  padding: 5px 0;
  color: #cecece;
}

.emotion-6:hover {
  color: white;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-11 {
  margin: 0 auto;
}

@media (min-width:768px) {
  .emotion-11 {
    width: 750px;
  }
}

@media (min-width:992px) {
  .emotion-11 {
    width: 970px;
  }
}

@media (min-width:1200px) {
  .emotion-11 {
    width: 1170px;
  }
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-2 * {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

<div>
    <button
      class="bp3-button emotion-1"
      type="button"
    >
      <span
        class="bp3-button-text"
      >
        <span
          class="bp3-icon bp3-icon-menu emotion-0"
          icon="menu"
        >
          <svg
            data-icon="menu"
            height="32"
            viewBox="0 0 20 20"
            width="32"
          >
            <desc>
              menu
            </desc>
            <path
              d="M1 6h18c.55 0 1-.45 1-1s-.45-1-1-1H1c-.55 0-1 .45-1 1s.45 1 1 1zm18 3H1c-.55 0-1 .45-1 1s.45 1 1 1h18c.55 0 1-.45 1-1s-.45-1-1-1zm0 5H1c-.55 0-1 .45-1 1s.45 1 1 1h18c.55 0 1-.45 1-1s-.45-1-1-1z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </span>
    </button>
    <div
      class="emotion-13"
    >
      <div
        class="bp3-collapse"
      >
        <div
          aria-hidden="true"
          class="bp3-collapse-body"
          style="transform: translateY(-0px);"
        >
          <div
            class="emotion-12"
          >
            <div
              class="emotion-11"
            >
              <div
                class="emotion-3"
              >
                <div
                  class="emotion-2"
                >
                  <span>
                    <span>
                      Navbar Item Alpha
                    </span>
                  </span>
                  <span>
                    <span>
                      Navbar Item Bravo
                    </span>
                  </span>
                </div>
              </div>
              <div>
                <span
                  class="emotion-4"
                />
                <hr
                  class="emotion-5"
                />
                <div
                  class="emotion-9 emotion-2"
                >
                  <a
                    class="emotion-6"
                    href="/first-tab/"
                  >
                    First Tab
                  </a>
                  <a
                    class="emotion-6"
                    href="/palette/"
                  >
                    Palette
                  </a>
                  <a
                    class="emotion-6"
                    href="/second-tab/"
                  >
                    Second Tab
                  </a>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Navbar Menu Menu can render with rendered navbar items 1`] = `
<DocumentFragment>
  .emotion-1 {
  background-color: #29333a !important;
  box-shadow: none !important;
  background-image: none !important;
  top: 15px;
  left: 15px;
  position: absolute;
  z-index: 1020;
}

.emotion-0 {
  color: #7a7e82 !important;
}

.emotion-0:hover {
  color: white;
}

.emotion-6 {
  color: white;
  background-color: #29333a;
  display: block;
  margin: 60px -20px 0 -20px;
}

.emotion-5 {
  min-height: 250px;
  padding: 50px 0px;
  overflow-y: scroll;
  max-height: 100vh;
}

@media (max-width:768px) {
  .emotion-5 {
    padding: 50px 20px;
  }
}

.emotion-3 {
  display: inline-block;
}

.emotion-4 {
  margin: 0 auto;
}

@media (min-width:768px) {
  .emotion-4 {
    width: 750px;
  }
}

@media (min-width:992px) {
  .emotion-4 {
    width: 970px;
  }
}

@media (min-width:1200px) {
  .emotion-4 {
    width: 1170px;
  }
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-2 * {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

<div>
    <button
      class="bp3-button emotion-1"
      type="button"
    >
      <span
        class="bp3-button-text"
      >
        <span
          class="bp3-icon bp3-icon-menu emotion-0"
          icon="menu"
        >
          <svg
            data-icon="menu"
            height="32"
            viewBox="0 0 20 20"
            width="32"
          >
            <desc>
              menu
            </desc>
            <path
              d="M1 6h18c.55 0 1-.45 1-1s-.45-1-1-1H1c-.55 0-1 .45-1 1s.45 1 1 1zm18 3H1c-.55 0-1 .45-1 1s.45 1 1 1h18c.55 0 1-.45 1-1s-.45-1-1-1zm0 5H1c-.55 0-1 .45-1 1s.45 1 1 1h18c.55 0 1-.45 1-1s-.45-1-1-1z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </span>
    </button>
    <div
      class="emotion-6"
    >
      <div
        class="bp3-collapse"
      >
        <div
          aria-hidden="true"
          class="bp3-collapse-body"
          style="transform: translateY(-0px);"
        >
          <div
            class="emotion-5"
          >
            <div
              class="emotion-4"
            >
              <div
                class="emotion-3"
              >
                <div
                  class="emotion-2"
                >
                  <span>
                    <span>
                      Navbar Item Alpha
                    </span>
                  </span>
                  <span>
                    <span>
                      Navbar Item Bravo
                    </span>
                  </span>
                </div>
              </div>
              <span />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
